Added some discs

--- a/src/main/resources/assets/communism/lang/en_us.json
+++ b/src/main/resources/assets/communism/lang/en_us.json
@@ -22,7 +22,7 @@
   "item.communism.disc_ussr_national_anthem": "Music Disc",
   "item.communism.disc_ussr_national_anthem.desc": "USSR National Anthem",
   "item.communism.disc_we_are_your_firm_successors": "Music Disc",
-  "item.communism.disc_we_are_your_firm_successors.desc": "We Are Your Firm Successors",
+  "item.communism.disc_we_are_your_firm_successors.desc": "We Are Your Firm Successor The CYL",
   "item.communism.disc_we_are_tomorrows_soviet_people": "Music Disc",
   "item.communism.disc_we_are_tomorrows_soviet_people.desc": "We Are Tomorrow's Soviet People",
   "item.communism.disc_our_triumphant_satellite": "Music Disc",
@@ -35,6 +35,16 @@
   "item.communism.disc_troika_galop.desc": "Troika Galop",
   "item.communism.disc_katyusha": "Music Disc",
   "item.communism.disc_katyusha.desc": "Katyusha",
+  "item.communism.disc_happy_wind": "Music Disc",
+  "item.communism.disc_happy_wind.desc": "Happy Wind",
+  "item.communism.disc_young_pioneers_day": "Music Disc",
+  "item.communism.disc_young_pioneers_day.desc": "Young Pioneer's Day",
+  "item.communism.disc_varchavianka": "Music Disc",
+  "item.communism.disc_varchavianka.desc": "Varchavianka",
+  "item.communism.disc_putins_boner": "Music Disc",
+  "item.communism.disc_putins_boner.desc": "Putin's Boner",
+  "item.communism.disc_no_communist_party_no_new_china": "Music Disc",
+  "item.communism.disc_no_communist_party_no_new_china.desc": "No Communist Party, No New China",
   "item.communism.ccp_banner_pattern": "Banner Pattern",
   "item.communism.ccp_banner_pattern.desc": "Communism Party Icon",
   "block.minecraft.banner.communism.ccp.yellow": "Yellow Communism Party Icon",
